# py-actor

./: Dockerfile  docker-compose.yml  pyproject.toml  shell.nix
integration/: prometheus.yml
src/py_actor/: actors.py  client.py  ecs.py  main.py  pykkatest.py  server.py
